test/fail/inheritance/inherit_self.lily
#[
SyntaxError: A class cannot inherit from itself!
    from inherit_self.lily:6:
]#

class abc < abc {  }
